# mola-release

./: .clang-format  .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  agents.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
apps/: mola-cli.cpp  mola-dir.cpp  mola-myapp.cpp  mola-navstate-cli.cpp  mola-yaml-parser.cpp
debian/: changelog  control  copyright  gbp.conf  rules
demos/: fake_sensor_publisher.py
docker/: Dockerfile  README.md  all_mola.repos  docker-build-and-run.sh  docker-compose.yml
docs/: Makefile  remote-static-files.sh  requirements.txt
kitti_metrics_eval/: CHANGELOG.rst  CMakeLists.txt  package.xml
modules/mola_common/: CMakeLists.txt  mola_common-config.cmake.in  package.xml
mola/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola-cli-launchs/: euroc_stereo_just_replay.yaml  image_directory_just_replay.yaml  kitti360_just_replay.yaml  kitti_just_replay.yaml  kitti_just_replay_to_ros2.yaml  lidar_bin_directory_just_replay.yaml  mulran_just_replay.yaml  mulran_just_replay_to_ros2.yaml  rosbag2_pointcloud_just_view.yaml  video_camera_source_just_replay.yaml
mola_bridge_ros2/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_imu_preintegration/: CHANGELOG.rst  package.xml
mola_input_euroc_dataset/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_kitti360_dataset/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_kitti_dataset/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_lidar_bin_dataset/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_mulran_dataset/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_paris_luco_dataset/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_rawlog/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_rosbag2/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_input_rosbag2/include/mola_input_rosbag2/: Rosbag2Dataset.h
mola_input_rosbag2/src/: Rosbag2Dataset.cpp
mola_input_video/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_kernel/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_kernel/include/mola_kernel/: Entity.h  Factor.h  Georeferencing.h  LazyLoadResource.h  MinimalModuleContainer.h  WorldModel.h  Yaml.h  id.h  pretty_print_exception.h  variant_helper.h
mola_kernel/include/mola_kernel/entities/: EntityBase.h  EntityRelativeBase.h  KeyFrameBase.h  LandmarkPoint3.h  RefPose3.h  RelDynPose3KF.h  RelPose3.h  RelPose3KF.h  entities-common.h
mola_kernel/include/mola_kernel/factors/: FactorBase.h  FactorConstVelKinematics.h  FactorRelativePose3.h  FactorStereoProjectionPose.h  SmartFactorIMU.h  SmartFactorStereoProjectionPose.h  factors-common.h
mola_kernel/include/mola_kernel/interfaces/: BackEndBase.h  Dataset_UI.h  DiagnosticsProvider.h  ExecutableBase.h  FilterBase.h  FrontEndBase.h  LocalizationSourceBase.h  MapServer.h  MapSourceBase.h  NavStateFilter.h  OfflineDatasetSource.h  RawDataConsumer.h  RawDataSourceBase.h  Relocalization.h  VizInterface.h
mola_kernel/include/mola_kernel/utils/: RegexCache.h  Synchronizer.h
mola_kernel/src/: Entity.cpp  Factor.cpp  LazyLoadResource.cpp  MinimalModuleContainer.cpp  WorldModel.cpp  pretty_print_exception.cpp  register.cpp
mola_kernel/src/entities/: EntityBase.cpp  LandmarkPoint3.cpp  RelDynPose3KF.cpp  RelPose3.cpp  RelPose3KF.cpp
mola_kernel/src/factors/: FactorBase.cpp  FactorConstVelKinematics.cpp  FactorRelativePose3.cpp  FactorStereoProjectionPose.cpp  SmartFactorIMU.cpp  SmartFactorStereoProjectionPose.cpp
mola_kernel/src/interfaces/: BackEndBase.cpp  Dataset_UI.cpp  ExecutableBase.cpp  FilterBase.cpp  FrontEndBase.cpp  KeyframeMapCapable.cpp  MapServer.cpp  NavStateFilter.cpp  RawDataSourceBase.cpp  Relocalization.cpp  VizInterface.cpp
mola_kernel/src/utils/: Synchronizer.cpp
mola_kernel/tests/: CMakeLists.txt  test_diagnostics_provider.cpp
mola_launcher/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_metric_maps/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_navstate_fg/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_navstate_fuse/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_pose_list/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_relocalization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_relocalization/include/mola_relocalization/: relocalization.h
mola_relocalization/src/: RelocalizationICP_SE2.cpp  RelocalizationLikelihood_SE2.cpp  find_best_poses_se2.cpp  relocalization.cpp
mola_relocalization/tests/: CMakeLists.txt  test-relocalization-se2-kitti.cpp
mola_traj_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_viz_imgui/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_viz_imgui/include/mola_viz_imgui/: MolaVizImGui.h
mola_viz_imgui/src/: MolaVizImGui.cpp
mola_yaml/: CHANGELOG.rst  CMakeLists.txt  package.xml
rpm/: ros-humble-kitti-metrics-eval.spec  ros-humble-mola-bridge-ros2.spec  ros-humble-mola-common.spec  ros-humble-mola-demos.spec  ros-humble-mola-imu-preintegration.spec  ros-humble-mola-input-euroc-dataset.spec  ros-humble-mola-input-kitti-dataset.spec  ros-humble-mola-input-kitti360-dataset.spec  ros-humble-mola-input-lidar-bin-dataset.spec  ros-humble-mola-input-mulran-dataset.spec  ros-humble-mola-input-paris-luco-dataset.spec  ros-humble-mola-input-rawlog.spec  ros-humble-mola-input-rosbag2.spec  ros-humble-mola-input-video.spec  ros-humble-mola-kernel.spec  ros-humble-mola-launcher.spec  ros-humble-mola-metric-maps.spec  ros-humble-mola-msgs.spec  ros-humble-mola-navstate-fg.spec  ros-humble-mola-navstate-fuse.spec  ros-humble-mola-pose-list.spec  ros-humble-mola-relocalization.spec  ros-humble-mola-test-datasets.spec  ros-humble-mola-traj-tools.spec  ros-humble-mola-viz-imgui.spec  ros-humble-mola-viz.spec  ros-humble-mola-yaml.spec  ros-humble-mola.spec  ros-iron-kitti-metrics-eval.spec  ros-iron-mola-bridge-ros2.spec  ros-iron-mola-common.spec  (+118 more)
src/: NDT.cpp  (+32 more)
(+229 files in other folders)
