<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_input_rosbag2</name>
  <version>2.1.0</version>
  <description>Offline RawDataSource from rosbag2 datasets</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">GPLv3</license>

  <url type="website">https://github.com/MOLAorg/mola/tree/develop/mola_input_rosbag2</url>

  <depend>cv_bridge</depend>
  <depend>mola_kernel</depend>
  <depend>mrpt_libobs</depend>
  <depend>mrpt_libros_bridge</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->

</package>
