<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_relocalization</name>
  <version>1.0.2</version>
  <description>C++ library with algorithms for relocalization, global localization, or pose estimation given a large initial uncertainty</description>

  <author     email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>
  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>

  <url type="website">https://github.com/MOLAorg/</url>

  <license file="LICENSE">GPLv3</license>

  <depend>mola_common</depend>
  <depend>mrpt2</depend>
  <depend>mp2p_icp</depend>
  <depend>mola_test_datasets</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->

</package>
